Adjusted the navbar settings for mobile devices.

--- a/style.css
+++ b/style.css
@@ -118,7 +118,8 @@ h1{
 }
 
 form{
-    position: relative;
+    position: sticky;
+    top: 10px;
 }
 
 #add-button{
@@ -180,6 +181,7 @@ form{
     align-items: center;
     flex-shrink: 0;
     transition: 200ms ease;
+    cursor: pointer;
 }
 
 input[type="checkbox"]:checked ~ .custom-checkbox{
@@ -214,6 +216,9 @@ input[type="checkbox"]{
         margin-top: 50px;
         font-size: 15vw;
     }
+    .dropdown-menu{
+        top: 100%;
+    }
 }
 
 
@@ -223,7 +228,7 @@ input[type="checkbox"]{
     align-items: center;
     padding: 10px 20px;
     background-color: var(--primary);
-    width: 100%;
+    width: 90%;
     max-width: 1200px;
     margin-bottom: 20px;
     border-radius: 10px;
@@ -266,13 +271,13 @@ input[type="checkbox"]{
 .dropdown-menu {
     display: none;
     position: absolute;
-    top: 100%;
-    right: 0;
+    top: 0%;
+    right: -5;    
     background-color: var(--primary);
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     overflow: hidden;
-    z-index: 10;
+    z-index: 90;
 }
 
 .dropdown:hover .dropdown-menu {
